Implement product editing
